[package]
name = "optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Direct optimization dependencies
good_lp = { version = "=1.12.0", default-features = false, features = ["minilp"] }
zmij = "=1.0.2"

# "Invisible" sub-dependencies that crash on Rust 1.63
ryu = "=1.0.13"
itoa = "=1.0.6"
log = "=0.4.17"
serde = "=1.0.152"
serde_json = "=1.0.91"
syn = "=1.0.109"
proc-macro2 = "=1.0.52"
quote = "=1.0.26"
