[package]
name = "optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Direct optimization dependencies
good_lp = { version = "=1.12.0", default-features = false, features = ["minilp"] }
zmij = "=1.0.2"

# Linear algebra pins for Rust 1.63 compatibility
ndarray = "=0.15.6"
matrixmultiply = "=0.3.7"
sprs = "=0.11.1"

# Utility pins to stop the modern rustc crashes
ryu = "=1.0.13"
itoa = "=1.0.6"
log = "=0.4.17"
serde = "=1.0.152"
serde_json = "=1.0.91"
syn = "=1.0.109"
proc-macro2 = "=1.0.52"
quote = "=1.0.26"
