[package]
name = "optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Baseline optimization dependencies
good_lp = { version = "=1.12.0", default-features = false, features = ["minilp"] }
zmij = "=1.0.0"

# Strict 2022 Linear Algebra stack
sprs = "=0.11.2"
ndarray = "=0.15.6"
matrixmultiply = "=0.3.7"

# Parallel processing stability
rayon = "=1.7.0"
rayon-core = "=1.11.0"

# Utility stability
ryu = "=1.0.13"
itoa = "=1.0.6"
log = "=0.4.17"
serde = "=1.0.152"
serde_json = "=1.0.91"
syn = "=1.0.109"
proc-macro2 = "=1.0.52"
quote = "=1.0.26"
